--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,17 +10,17 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('index') }}">Event Management</a>
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">Event Management</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+                        <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('create_event') }}">Create Event</a>
+                        <a class="nav-link" href="{{ url_for('main.create_event') }}">Create Event</a>
                     </li>
                 </ul>
             </div>
