--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 <div class="row mb-4">
     <div class="col">
         <h1>Events</h1>
-        <a href="{{ url_for('create_event') }}" class="btn btn-primary">Create New Event</a>
+        <a href="{{ url_for('main.create_event') }}" class="btn btn-primary">Create New Event</a>
     </div>
 </div>
 
@@ -35,8 +35,8 @@
                 {% endif %}
                 
                 <div class="btn-group">
-                    <a href="{{ url_for('edit_event', id=event.id) }}" class="btn btn-warning">Edit</a>
-                    <form action="{{ url_for('delete_event', id=event.id) }}" method="POST" class="d-inline">
+                    <a href="{{ url_for('main.edit_event', id=event.id) }}" class="btn btn-warning">Edit</a>
+                    <form action="{{ url_for('main.delete_event', id=event.id) }}" method="POST" class="d-inline">
                         <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this event?')">Delete</button>
                     </form>
                 </div>
