--- a/app/templates/edit_event.html
+++ b/app/templates/edit_event.html
@@ -65,7 +65,7 @@
             </div>
             
             <button type="submit" class="btn btn-primary">Update Event</button>
-            <a href="{{ url_for('index') }}" class="btn btn-secondary">Cancel</a>
+            <a href="{{ url_for('main.index') }}" class="btn btn-secondary">Cancel</a>
         </form>
     </div>
 </div>
