--- a/app/templates/create_event.html
+++ b/app/templates/create_event.html
@@ -58,7 +58,7 @@
             </div>
             
             <button type="submit" class="btn btn-primary">Create Event</button>
-            <a href="{{ url_for('index') }}" class="btn btn-secondary">Cancel</a>
+            <a href="{{ url_for('main.index') }}" class="btn btn-secondary">Cancel</a>
         </form>
     </div>
 </div>
